<resources>
    <string name="app_name">Weather</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_toast">Refresh page</string>
    <string name="playingmusic">Playing music</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="HN">Hanoi</string>
    <string name="Pari">Paris</string>
    <string name="TL">Toulouse</string>
    <string name="city_name">Ha Noi</string>
    <string name="language_settings">Language Settings</string>
    <string name="languages2">Languages</string>
    <string name="app_language_summary">Select the app language</string>
    <string name="format_settings">Format</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">Celsius (°C)</string>
    <string name="fahrenheit">Fahrenheit (°F)</string>
    <string name="date_format">Date Format</string>
    <string name="date_format_summary">Select your preferred date format</string>
    <string name="API_key">API Key</string>
    <string name="enterAPI">Enter your API key</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="copyright_text" translatable="false">© 2024 NTLG1. All Rights Reserved.</string>
    <string name="guide1">After successfully signing in, tap the ☰ icon in the top right corner, and then tap on the circled tab.</string>
    <string name="guide2">Tap on the circled API Keys tab then copy the key at the circled location\n\nLanguage, Format, City Selection can be changed in settings\n\nYou can reopen the guide page in settings</string>
    <string name="welcome_config">To use the app you must have an OpenWeather account and input your APi key\n\nCreate an account here:\nhttps://home.openweathermap.org/users/sign_up\n\nAttention: Verify your email. After a couple of hours, your API key will be ready to be used.</string>
    <string name="about" >About</string>
    <string name="guide_trigger" >To Guide Screen</string>
    <string name="guide_summary" >A brief guide on how to use the app</string>
    <string name="save" >Save</string>
    <string name="cancel" >Cancel</string>
    <string name="APIKeySaved" >API Key saved:</string>
    <string name="Select_City" >Select city</string>
    <string name="City1" >First city</string>
    <string name="City2" >Second city</string>
    <string name="City3" >Third city</string>
    <string name="Select_a_city" >Select a city</string>
    <string name="min" >Min</string>
    <string name="max" >Max</string>
    <string name="humidity" >💦 Humidity</string>
    <string name="pressure" >🕛 Pressure</string>
    <string name="wind" >💨 Wind</string>
    <string name="con_fail">Network error or invalid API key</string>
    <string name="no_result">No result found</string>
    <string name="ok">OK</string>
    <string name="how_ent_API">Please enter API key in settings</string>
    <string name="about_summary">More information about the app</string>
    <string name="about_message">This is a free weather app for Android that uses the OpenWeatherMap API to provide users with sufficient weather information.</string>
    <string name="wait">Please wait...</string>
</resources>