<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextApiKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterAPI"
        android:inputType="text"
        android:maxLength="100" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_700"/>

        <Button
            android:id="@+id/btnSaveApiKey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_700"/>

    </LinearLayout>
</LinearLayout>
